@@ -5,7 +5,7 @@ FFmpegfs NEWS
 * Cool, there's an online review on Linux Uprising, you can read it here:
   https://www.linuxuprising.com/2020/03/ffmpegfs-is-fuse-based-filesystem-for.html
 
-Important changes in 2.7 (2021-10-XX):
+Important changes in 2.7 (2021-11-XX):
 
 * Bugfix: Issue #92: Fixed crash when hardware decoding failed. The problem
   is that the FFmpeg API very late reports that it cannot decode the file in
@@ -24,6 +24,8 @@ Important changes in 2.7 (2021-10-XX):
   as a whole, the parameter would be --hwaccel_dec_blocked=VP9. To block
   both profile 0 and 1, use --hwaccel_dec_blocked=VP9:0:1.
   The parameter can be repeated to block even more codecs.
+* Bugfix: Issue #96: Fixed potential buffer overrun and crash when reading
+  corrupted input files.
 
 Important changes in 2.6 (2021-09-04):
 
